--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
+    "react-intl": "^6.2.10",
     "react-slick": "^0.29.0",
     "react-use-downloader": "^1.2.2",
     "reactstrap": "^9.1.5",
